--- a/Estilos/estiloBody.css
+++ b/Estilos/estiloBody.css
@@ -12,14 +12,14 @@ section.cuerpo {
     border: 3px blue solid;
 }
 
-section.desplegable {
+/*section.desplegable {
     position: relative;
     width: 25%;
     height: 100%;
 
     border: 3px blueviolet solid;
 }
-
+*/
 section.catalogo {
     position: absolute;
     width: 100%;
@@ -39,26 +39,57 @@ footer{
 }
 
 section.desplegable {
+  /*
     height: 100%; /* ocupa todo el largo */
-    width: 0; /* cambia con JavaScript */
+  /*  width: 0; /* cambia con JavaScript */
+    /*
     position: fixed;
     z-index: 1;
     top: 0;
     left: 0;
     background-color: #111;
-    overflow-x: hidden; /* Desactivar scroll lateral */
+    overflow-x: hidden; /* Desactivar scroll lateral *//*
     padding-top: 60px;
     transition: 0.5s; /* 0.5 de transicion (efecto) */
+    height: 100%;
+    width: 200px;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    padding-top: 20px;
 }
 section.desplegable a{
-    padding: 8px 8px 8px 32px;
+    /*padding: 8px 8px 8px 32px;
     text-decoration: none;
     font-size: 25px;
     color: #818181;
     display: block;
+
+    background: none;
+    width:100%;
+    text-align: left;
+    cursor: pointer;
+
+
     transition: 0.3s;
+    */
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    font-size: 20px;
+    color: #818181;
+    display: block;
+    border: none;
+    background: none;
+    width: 100%;
+    text-align: left;
+    cursor: pointer;
+    outline: none;
 }
-section.desplegable a:hover{
+
+section.desplegable a:hover, section.dropdownDesplegable-btn:hover{
     color: #f1f1f1;
 }
 section.desplegable .closebtn {
@@ -68,6 +99,18 @@ section.desplegable .closebtn {
     font-size: 36px;
     margin-left: 1%;
 }
+
+div.desOculto {
+  display: none;
+  background-color: #262626;
+  padding-left: 8px;
+}
+
+i.fa-caret-down {
+  float: right;
+  padding-right: 8px;
+}
+
 section.cuerpo {
     transition: margin-left .5s;
     padding: 20px;
