--- a/Estilos/estiloBody.css
+++ b/Estilos/estiloBody.css
@@ -11,15 +11,6 @@ section.cuerpo {
 
     border: 3px blue solid;
 }
-
-/*section.desplegable {
-    position: relative;
-    width: 25%;
-    height: 100%;
-
-    border: 3px blueviolet solid;
-}
-*/
 section.catalogo {
     position: absolute;
     width: 100%;
@@ -30,89 +21,37 @@ section.catalogo {
     border: 3px black solid;
 }
 
-footer{
-    position: relative;
-    width: 100%;
-    height: 250px;
-
-    border: 3px darkorange solid;
-}
-
 section.desplegable {
-  /*
-    height: 100%; /* ocupa todo el largo */
-  /*  width: 0; /* cambia con JavaScript */
-    /*
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: #111;
-    overflow-x: hidden; /* Desactivar scroll lateral *//*
-    padding-top: 60px;
-    transition: 0.5s; /* 0.5 de transicion (efecto) */
-    height: 100%;
-    width: 200px;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: #111;
-    overflow-x: hidden;
-    padding-top: 20px;
+      height: 100%; /* 100% Full-height */
+      width: 0; /* 0 width - change this with JavaScript */
+      position: fixed; /* Stay in place */
+      z-index: 1; /* Stay on top */
+      top: 0; /* Stay at the top */
+      left: 0;
+      background-color: #111; /* Black*/
+      overflow-x: hidden; /* Disable horizontal scroll */
+      padding-top: 60px; /* Place content 60px from the top */
+      transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
 }
+
 section.desplegable a{
-    /*padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
-
-    background: none;
-    width:100%;
-    text-align: left;
-    cursor: pointer;
-
-
-    transition: 0.3s;
-    */
-    padding: 6px 8px 6px 16px;
-    text-decoration: none;
-    font-size: 20px;
-    color: #818181;
-    display: block;
-    border: none;
-    background: none;
-    width: 100%;
-    text-align: left;
-    cursor: pointer;
-    outline: none;
+      padding: 8px 8px 8px 32px;
+      text-decoration: none;
+      font-size: 25px;
+      color: #818181;
+      display: block;
+      transition: 0.3s;
 }
 
-section.desplegable a:hover, section.dropdownDesplegable-btn:hover{
+section.desplegable a:hover{
     color: #f1f1f1;
 }
 section.desplegable .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-left: 1%;
-}
-
-div.desOculto {
-  display: none;
-  background-color: #262626;
-  padding-left: 8px;
-}
-
-<<<<<<< HEAD
-i.fa-caret-down {
-=======
-.fa-caret-down {
->>>>>>> 505770d28f25ddb454fa9241bd1cb61f5e43ca1a
-  float: right;
-  padding-right: 8px;
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
 }
 
 section.cuerpo {
@@ -123,7 +62,6 @@ section.cuerpo {
 @media screen and (max-height: 450px) {
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
-}
 
 
 #ofertas {
