--- a/logout/Estilologout.css
+++ b/logout/Estilologout.css
@@ -6,21 +6,34 @@ section.fondo {
 section.logout {
   position: absolute;
   margin: auto;
-    top:0;
+    top: 0;
     left:0;
     right:0;
     bottom:0;
-    height: 400px;
+    height: 650px;
     width: 150px;
     /*height: 15%;
     width: 10%;*/
     /*border: 3px solid black;*/
-    border-radius: 35px;
+    /*border-radius: 35px;
     padding: 100px;
-    /*top: 47.5%;
-    left: 45%;*/
-    background-color: #900001;
+    top: 47.5%;
+    left: 45%;
+    background-color: #900001;*/
 
+}
+section.backgroundForm {
+  position: absolute;
+  border-radius: 35px;
+  padding: 100px;
+  background-color: #900001;
+  height: 650px;
+  width: 150px;
+  margin: auto;
+  top:75px;
+  right: 0;
+  left: 0;
+  bottom: 0;
 }
 
 #imagenDer {
