--- a/Estilos/estiloLogin.css
+++ b/Estilos/estiloLogin.css
@@ -11,7 +11,7 @@ section.login {
     right:0;
     bottom:0;
     height: 100px;
-    width: 200px;
+    width: 250px;
     /*height: 15%;
     width: 10%;*/
     /*border: 3px solid black;*/
@@ -19,8 +19,11 @@ section.login {
     padding: 100px;
     /*top: 47.5%;
     left: 45%;*/
-    background-color: #900101;
+    background-color: #DF9191;
+}
 
+form input[type=text] {
+  width: 240px;
 }
 
 #imagenIzq {
@@ -32,4 +35,24 @@ section.login {
   position: absolute;
   top: 20%;
   right: 5%;
+}
+
+input[type=button] {
+  background-color: #900101;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  float: right;
+}
+
+input[type=submit] {
+  background-color: #900101;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  float: left;
 }
