--- a/Estilos/estiloLogon.css
+++ b/Estilos/estiloLogon.css
@@ -3,6 +3,10 @@ section.fondo {
     height: 100%;
 }
 
+h2 {
+  text-align: center;
+}
+
 section.logout {
   position: absolute;
   margin: auto;
@@ -11,7 +15,7 @@ section.logout {
     right:0;
     bottom:0;
     height: 650px;
-    width: 150px;
+    width: 250px;
     /*height: 15%;
     width: 10%;*/
     /*border: 3px solid black;*/
@@ -20,24 +24,52 @@ section.logout {
     top: 47.5%;
     left: 45%;
     background-color: #900001;*/
-
 }
+
+form input[type=text]{
+  width: 250px;
+}
+
 section.backgroundForm {
   position: absolute;
   border-radius: 35px;
   padding: 100px;
-  background-color: #900001;
+  background-color: #DF9191;
   height: 650px;
-  width: 150px;
+  width: 250px;
   margin: auto;
-  top:75px;
+  top:100px;
   right: 0;
   left: 0;
   bottom: 0;
 }
+input[type=button] {
+  background-color: #900101;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  float: right;
+}
 
+input[type=submit] {
+  background-color: #900101;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  float: left;
+}
+
+#imagenIzq {
+  position: absolute;
+  top: 20%;
+  left: 5%;
+}
 #imagenDer {
   position: absolute;
-  top: 10%;
+  top: 20%;
   right: 5%;
 }
