--- a/Estilos/estiloLogin.css
+++ b/Estilos/estiloLogin.css
@@ -2,7 +2,9 @@ section.fondo {
     width: 100%;
     height: 100%;
 }
-
+body {
+  background-color: orange;
+}
 section.login {
   position: absolute;
   margin: auto;
@@ -10,31 +12,33 @@ section.login {
     left:0;
     right:0;
     bottom:0;
-    height: 100px;
-    width: 250px;
+    height: 128px;
+    width: 128px;
     /*height: 15%;
     width: 10%;*/
-    /*border: 3px solid black;*/
+    border: 3px solid black;
     border-radius: 35px;
     padding: 100px;
     /*top: 47.5%;
     left: 45%;*/
     background-color: #DF9191;
+
 }
 
 form input[type=text] {
-  width: 240px;
+  width: 142px;
+
 }
 
 #imagenIzq {
   position: absolute;
   top: 20%;
-  left: 5%;
+  left: 0;
 }
 #imagenDer {
   position: absolute;
   top: 20%;
-  right: 5%;
+  right: 0;
 }
 
 input[type=button] {
@@ -44,7 +48,8 @@ input[type=button] {
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  float: right;
+  float: center;
+  margin:2px;
 }
 
 input[type=submit] {
@@ -54,5 +59,7 @@ input[type=submit] {
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  float: left;
+  float: center;
+  margin: 7px;
+
 }
