--- a/Estilos/estiloBody.css
+++ b/Estilos/estiloBody.css
@@ -7,18 +7,38 @@ section.cuerpo {
     position: relative;
     top:0;
     width: 100%;
-    height: 1000px;
+
 
     border: 3px blue solid;
 }
 section.catalogo {
-    position: absolute;
-    width: 100%;
-    top:0;
+    position: relative;
+    width: 70%;
+    top: 0;
     right:0;
+    left:0;
+    bottom:0;
+    margin: auto;
     height: 100%;
     transition: 0.5s;
     border: 3px black solid;
+}
+
+section.catalogo table{
+    widht: 100%;
+    left: 0;
+    rigth: 0;
+    border: 3px solid crimson;
+}
+
+section.catalogo tr{
+    width: 100%;
+}
+
+section.catalogo td{
+    text-align: center;
+    width: 384px;
+    border: 1px solid navy;
 }
 
 section.desplegable {
@@ -60,18 +80,20 @@ section.cuerpo {
 }
 
 @media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
-    .sidenav a {font-size: 18px;}
+    .sidenav {
+        padding-top: 15px;
+    }
 
-
-#ofertas {
-    margin-left: 10%;
-    margin-right: 10%;
-    margin-top: 3%;
-    margin-bottom: 3%;
+    .sidenav a {
+        font-size: 18px;
+    }
 }
 
+.filaOferta {
+    width: 20%;
+    height: 350px;
+}
 .celdaCat {
-    height: 200px;
-    width: 250px;
+    width: 20%;
+    height: 350px;
 }
